--- a/style.css
+++ b/style.css
@@ -1,3 +1,60 @@
+/* ENTIRE PAGE */
 * {
   margin: 0;
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+}
+
+/* NAVBAR  */
+.navbar .container {
+  background-color: red;
+  overflow: auto;
+  height: 86px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+}
+
+.logo-container {
+  margin-left: 100px;
+  display: flex;
+  align-items: center;
+}
+
+.logo-container img {
+  height: 60px;
+  margin-right: 10px
+}
+
+.logo-container h2 {
+  font-size: 2em;
+}
+
+.navbar ul {
+  margin-right: 60px;
+}
+
+.navbar ul li {
+  float: left;
+  list-style: none;
+
+  padding: 20px 30px;
+  font-size: 1.6em;
+
+  &:hover {
+    background-color: green;
+  }
+}
+
+/* HERO */
+
+/* CONTENT */
