--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   background-color: var(--fern-color);
 }
 
-/* NAVBAR  */
+/* ##################### NAVBAR ##################### */
 .navbar .container {
   background-color: var(--beige-color);
   box-shadow: 0 4px 4px 0 var(--shadow);
@@ -60,6 +60,13 @@ a {
   font-size: 3em;
   font-family: 'Great Vibes', sans-serif;
   font-weight: 400;
+  padding: 8px 5px;
+  border-radius: 25px;
+
+  &:hover {
+    background-color: var(--brown-color);
+    color: var(--bone-color);
+  }
 }
 
 .navbar ul {
@@ -84,7 +91,7 @@ a {
   }
 }
 
-/* HERO */
+/* ##################### HERO ##################### */
 .hero {
   display: flex;
   justify-content: center;
@@ -145,7 +152,7 @@ a {
 }
 
 
-/* HOME CONTENT */
+/* ##################### HOME CONTENT ##################### */
 .content {
   box-shadow: 0 4px 4px 0 var(--shadow) inset;
   background-color: var(--fern-color);
@@ -188,7 +195,7 @@ a {
 }
 
 
-/* MENU */
+/* ##################### Menu page ##################### */
 /* Larger grid 3x4 */
 .menu {
   display: grid;
@@ -196,7 +203,7 @@ a {
   grid-template-rows: 3fr 1fr 6fr 3fr 6fr 2fr;
   justify-items: center;
 
-  margin: 30px 300px;
+  margin: 20px 300px;
   /* max-height: 80dvh; */
 
 
@@ -266,7 +273,7 @@ tbody hr {
 
 
 
-/* Location page */
+/* ##################### Location page ##################### */
 .location {
   display: grid;
   grid-template-columns: 1fr 9fr 1fr 9fr 1fr;
@@ -274,7 +281,7 @@ tbody hr {
   justify-items: center;
   align-items: start;
 
-  margin: 30px 300px;
+  margin: 20px 300px;
 }
 
 .location h1 {
@@ -301,9 +308,9 @@ tbody hr {
 
 
 
-/* Contact page */
+/* ##################### Contact page ##################### */
 .contact {
-  margin: 30px 300px;
+  margin: 20px 600px;
 }
 
 .contact h1 {
@@ -311,6 +318,7 @@ tbody hr {
   font-size: 3.5em;
   font-weight: 600;
   text-align: center;
+  margin-bottom: 2dvh;
 }
 
 .contact form {
@@ -323,21 +331,32 @@ tbody hr {
   width: 25dvw;
   height: 5dvh;
   margin: 10px;
+  font-size: 2em;
 
   background-color: var(--bone-color);
   border-width: 6px;
-  
 
-  &:placeholder {
-    font-family: 'Crimson Text', sans-serif;
+  padding-block: 10px;
+  padding-inline: 10px;
+
+  &:focus {
+    outline: none;
+    border-color: var(--oak-color);
   }
 }
 
+::placeholder {
+    color: var(--brown-color);
+  }
+
+#message {
+  height: 25dvh;
+}
 
 
 .contact form button {
   background-color: var(--leaf-color);
-  margin-top: 10dvh;
+  margin: 7dvh 0;
   padding: 0 50px;
 
   font-size: 2.3em;
