--- a/style.css
+++ b/style.css
@@ -44,20 +44,47 @@
 a {
   text-decoration: none;
 }
-
+@media (min-width: 769px) and (max-width: 1255px) {
+  .logo-container img {
+    height: 40px;
+  }
+  .logo-container {
+    margin-left: 3dvw;
+  }
+  .logo-container h2 {
+    font-size: 2.5em;
+  }
+  .navbar ul {
+    margin-right: 3dvw;
+  }
+  .navbar ul li a {
+    padding: 10px 10px;
+  }
+}
 .logo-container {
-  margin-left: 100px;
   display: flex;
   align-items: center;
 }
 
-.logo-container img {
-  height: 60px;
-  margin-right: 5px
+@media (min-width: 1256px) {
+  .logo-container img {
+    height: 60px;
+    margin-right: 5px
+  }
+  .logo-container {
+    margin-left: 100px;
+  }
+  .logo-container h2 {
+    font-size: 3em;
+  }
+  .navbar ul {
+    margin-right: 60px;
+  }
+  .navbar ul li a {
+    padding: 20px 30px;
+  }
 }
-
 .logo-container h2 {
-  font-size: 3em;
   font-family: 'Great Vibes', sans-serif;
   font-weight: 400;
   padding: 8px 5px;
@@ -69,9 +96,7 @@ a {
   }
 }
 
-.navbar ul {
-  margin-right: 60px;
-}
+
 
 .navbar ul li {
   float: left;
@@ -82,7 +107,6 @@ a {
 }
 
 .navbar ul li a {
-  padding: 20px 30px;
   border-radius: 25px;
   
   &:hover {
@@ -203,9 +227,33 @@ a {
   grid-template-rows: 3fr 1fr 6fr 3fr 6fr 2fr;
   justify-items: center;
 
-  margin: 20px 300px;
-  /* max-height: 80dvh; */
+  margin: 2dvh 16dvw;
+}
 
+@media (min-width: 769px) and (max-width: 1255px) {
+  .menu {
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 0fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr;
+  }
+  .menu h1 {
+  grid-area: 1 / 2;
+  }
+
+  #menu1 {
+  grid-area: 3 / 2;
+  }
+
+  #menu2 {
+    grid-area: 5 / 2;
+  }
+
+  #menu3 {
+    grid-area: 7 / 2;
+  }
+
+  #menu4 {
+    grid-area: 9 / 2;
+  }
 
 }
 
@@ -250,9 +298,13 @@ tbody hr {
 }
 
 .menu h1 {
-  grid-area: 1 / 3;
   font-size: 3.5em;
   font-weight: 600;
+}
+
+@media (min-width: 1256px) {
+.menu h1 {
+  grid-area: 1 / 3;
 }
 
 #menu1 {
@@ -270,7 +322,7 @@ tbody hr {
 #menu4 {
   grid-area: 5 / 4;
 }
-
+}
 
 
 /* ##################### Location page ##################### */
