--- a/style.css
+++ b/style.css
@@ -32,10 +32,7 @@
 .navbar .container {
   background-color: var(--beige-color);
   box-shadow: 0 4px 4px 0 var(--shadow);
-  
   overflow: auto;
-  height: 86px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -44,46 +41,12 @@
 a {
   text-decoration: none;
 }
-@media (min-width: 769px) and (max-width: 1255px) {
-  .logo-container img {
-    height: 40px;
-  }
-  .logo-container {
-    margin-left: 3dvw;
-  }
-  .logo-container h2 {
-    font-size: 2.5em;
-  }
-  .navbar ul {
-    margin-right: 3dvw;
-  }
-  .navbar ul li a {
-    padding: 10px 10px;
-  }
-}
+
 .logo-container {
   display: flex;
   align-items: center;
 }
 
-@media (min-width: 1256px) {
-  .logo-container img {
-    height: 60px;
-    margin-right: 5px
-  }
-  .logo-container {
-    margin-left: 100px;
-  }
-  .logo-container h2 {
-    font-size: 3em;
-  }
-  .navbar ul {
-    margin-right: 60px;
-  }
-  .navbar ul li a {
-    padding: 20px 30px;
-  }
-}
 .logo-container h2 {
   font-family: 'Great Vibes', sans-serif;
   font-weight: 400;
@@ -96,14 +59,8 @@ a {
   }
 }
 
-
-
 .navbar ul li {
-  float: left;
   list-style: none;
-
-  font-size: 1.7em;
-  
 }
 
 .navbar ul li a {
@@ -112,6 +69,86 @@ a {
   &:hover {
     background-color: var(--brown-color);
     color: var(--bone-color);
+  }
+}
+/* Mobile */
+@media (max-width: 480px) {
+  .navbar .container {
+    height: 7dvh;
+  }
+  .logo-container {
+    flex-direction: column;
+    margin-left: 5dvw;
+  }
+  .logo-container img {
+    height: 4dvh;
+  }
+  .logo-container h2 {
+    display: none;
+  }
+  .navbar ul {
+    margin-right: 5dvw;
+    padding-inline-start: 0;
+  }
+  .navbar ul li {
+    float: left;
+    font-size: 1.2em;
+  }
+  .navbar ul li a {
+    padding: 10px;
+  }
+}
+
+/* Laptop */
+@media (min-width: 769px) and (max-width: 1255px) {
+  .navbar .container {
+    height: 10dvh;
+  }
+  .logo-container {
+    margin-left: 3dvw;
+  }
+  .logo-container img {
+    height: 40px;
+  }
+  .logo-container h2 {
+    font-size: 2.5em;
+  }
+  .navbar ul {
+    margin-right: 3dvw;
+  }
+  .navbar ul li {
+    float: left;
+    font-size: 1.7em;
+  }
+  .navbar ul li a {
+    padding: 10px 10px;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1256px) {
+  .navbar .container {
+    height: 10dvh;
+  }
+  .logo-container {
+    margin-left: 100px;
+  }
+  .logo-container img {
+    height: 60px;
+    margin-right: 5px
+  }
+  .logo-container h2 {
+    font-size: 3em;
+  }
+  .navbar ul {
+    margin-right: 60px;
+  }
+  .navbar ul li {
+    float: left;
+    font-size: 1.7em;
+  }
+  .navbar ul li a {
+    padding: 20px 30px;
   }
 }
 
@@ -223,38 +260,7 @@ a {
 /* Larger grid 3x4 */
 .menu {
   display: grid;
-  grid-template-columns: 1fr 5fr 2fr 5fr 1fr;
-  grid-template-rows: 3fr 1fr 6fr 3fr 6fr 2fr;
   justify-items: center;
-
-  margin: 2dvh 16dvw;
-}
-
-@media (min-width: 769px) and (max-width: 1255px) {
-  .menu {
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 1fr 0fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr;
-  }
-  .menu h1 {
-  grid-area: 1 / 2;
-  }
-
-  #menu1 {
-  grid-area: 3 / 2;
-  }
-
-  #menu2 {
-    grid-area: 5 / 2;
-  }
-
-  #menu3 {
-    grid-area: 7 / 2;
-  }
-
-  #menu4 {
-    grid-area: 9 / 2;
-  }
-
 }
 
 /* Table within grid */
@@ -276,7 +282,6 @@ table {
 }
 
 th {
-  font-size: 2.5em;
   font-weight: 600;
   padding: 0 5px;
 }
@@ -287,7 +292,6 @@ thead hr {
 
 td {
   padding: 0 5px;
-  font-size: 1.7em;
 }
 
 tbody hr {
@@ -298,30 +302,96 @@ tbody hr {
 }
 
 .menu h1 {
-  font-size: 3.5em;
+  
   font-weight: 600;
 }
 
+/* Mobile */
+@media (max-width: 480px) {
+  .menu {
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 0fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr;
+    margin: 2dvh 5dvw;
+  }
+  .menu h1 {
+    font-size: 2em;
+    grid-area: 1 / 2;
+  }
+  #menu1 {
+    grid-area: 3 / 2;
+  }
+  #menu2 {
+    grid-area: 5 / 2;
+  }
+  #menu3 {
+    grid-area: 7 / 2;
+  }
+  #menu4 {
+    grid-area: 9 / 2;
+  }
+}
+/* Tablet */
+@media (min-width: 769px) and (max-width: 1255px) {
+  .menu {
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 0fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr 2fr 0.5fr;
+    margin: 2dvh 16dvw;
+  }
+  .menu h1 {
+    font-size: 3.5em;
+    grid-area: 1 / 2;
+  }
+  #menu1 {
+    grid-area: 3 / 2;
+  }
+  #menu2 {
+    grid-area: 5 / 2;
+  }
+  #menu3 {
+    grid-area: 7 / 2;
+  }
+  #menu4 {
+    grid-area: 9 / 2;
+  }
+
+  th {
+    font-size: 2.5em;
+  }
+  td {
+    font-size: 1.7em;
+  }
+}
+
+/* Desktop */
 @media (min-width: 1256px) {
-.menu h1 {
-  grid-area: 1 / 3;
-}
+  .menu {
+    grid-template-columns: 1fr 5fr 2fr 5fr 1fr;
+    grid-template-rows: 3fr 1fr 6fr 3fr 6fr 2fr;
+    margin: 2dvh 16dvw;
+  }
+  .menu h1 {
+    font-size: 3.5em;
+    grid-area: 1 / 3;
+  }
+  #menu1 {
+    grid-area: 3 / 2;
+  }
+  #menu2 {
+    grid-area: 3 / 4;
+  }
+  #menu3 {
+    grid-area: 5 / 2;
+  }
+  #menu4 {
+    grid-area: 5 / 4;
+  }
 
-#menu1 {
-  grid-area: 3 / 2;
-}
-
-#menu2 {
-  grid-area: 3 / 4;
-}
-
-#menu3 {
-  grid-area: 5 / 2;
-}
-
-#menu4 {
-  grid-area: 5 / 4;
-}
+  th {
+    font-size: 2.5em;
+  }
+  td {
+    font-size: 1.7em;
+  }
 }
 
 
