--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
   
 }
 
@@ -185,9 +186,11 @@ a {
 }
 
 .hero-text h1 {
-  margin: 50px 0;
+  margin: 40px 0px;
   font-size: 3.8em;
   font-weight: 600;
+  text-align: center;
+  line-height: 1.2;
 }
 
 .hero-text p {
@@ -198,8 +201,9 @@ a {
 
 .hero-text .button {
   background-color: var(--bone-color);
-  margin-top: 10dvh;
+  justify-self: center;
   padding: 0 50px;
+  margin: 7dvh 0;
 
   font-size: 2.7em;
   border-radius: 42px;
